// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CodeManagementPageWrapper renders renders empty results correctly 1`] = `
Array [
  <div
    className="hero py-4 pt-md-5 pb-md-0"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-12 col-md-9 mb-2 mb-md-1"
        >
          <h1
            className={null}
          >
            Code Management
          </h1>
        </div>
        <div
          className="col-12 col-md-3 text-md-right mb-2 mb-md-1"
        >
          <img
            alt="edX for Business"
            src="test-file-stub"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="container-fluid"
  >
    <div
      className="row mt-4 mb-3 no-gutters"
    >
      <div
        className="col-12 col-xl-3 mb-3 mb-xl-0"
      >
        <h2
          className={null}
        >
          Overview
        </h2>
      </div>
      <div
        className="col-12 col-xl-4 mb-3 mb-xl-0 offset-xl-1"
      >
        <div
          className="border search-field"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            className="form-group form-inline"
          >
            <label
              className=""
              htmlFor="asInput1"
              id="label-asInput1"
            >
              Search by email or code:
            </label>
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              />
              <input
                aria-describedby="error-asInput1"
                aria-invalid={false}
                autoComplete="off"
                className="form-control is-invalid-nodanger input no-clear-btn"
                disabled={false}
                id="asInput1"
                name="search"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyPress={[Function]}
                placeholder=""
                required={false}
                role="searchbox"
                type="search"
                value=""
              />
              <div
                className="input-group-append"
              >
                <button
                  className="search-btn"
                  disabled={true}
                  onClick={[Function]}
                >
                  <span
                    aria-hidden={true}
                    className="fa fa-search"
                    id="Icon2"
                  />
                  <span
                    className="sr-only"
                  >
                    Submit search
                  </span>
                </button>
              </div>
            </div>
            <div
              aria-live="polite"
              className="invalid-feedback invalid-feedback-nodanger"
              id="error-asInput1"
            >
              <span />
            </div>
          </div>
        </div>
      </div>
      <div
        className="col-12 col-xl-4 mb-3 mb-xl-0 text-xl-right"
      >
        <button
          className="btn mr-2 btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa fa-refresh mr-2"
            id="Icon3"
          />
          Refresh data
        </button>
        <a
          className="request-codes-btn btn btn-primary"
          href="/test-page/request"
          onClick={[Function]}
        >
          <span
            aria-hidden={true}
            className="fa fa-plus mr-2"
            id="Icon4"
          />
          Request more codes
        </a>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="alert fade alert-warning show"
          hidden={false}
          role="alert"
        >
          <div
            className="alert-dialog"
          >
            <div
              className="d-flex"
            >
              <div
                className="icon mr-2"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-exclamation-circle"
                  id="Icon5"
                />
              </div>
              <div
                className="message"
              >
                There are no results.
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`CodeManagementPageWrapper renders renders error state correctly 1`] = `
Array [
  <div
    className="hero py-4 pt-md-5 pb-md-0"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-12 col-md-9 mb-2 mb-md-1"
        >
          <h1
            className={null}
          >
            Code Management
          </h1>
        </div>
        <div
          className="col-12 col-md-3 text-md-right mb-2 mb-md-1"
        >
          <img
            alt="edX for Business"
            src="test-file-stub"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="container-fluid"
  >
    <div
      className="row mt-4 mb-3 no-gutters"
    >
      <div
        className="col-12 col-xl-3 mb-3 mb-xl-0"
      >
        <h2
          className={null}
        >
          Overview
        </h2>
      </div>
      <div
        className="col-12 col-xl-4 mb-3 mb-xl-0 offset-xl-1"
      >
        <div
          className="border search-field"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            className="form-group form-inline"
          >
            <label
              className=""
              htmlFor="asInput18"
              id="label-asInput18"
            >
              Search by email or code:
            </label>
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              />
              <input
                aria-describedby="error-asInput18"
                aria-invalid={false}
                autoComplete="off"
                className="form-control is-invalid-nodanger input no-clear-btn"
                disabled={false}
                id="asInput18"
                name="search"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyPress={[Function]}
                placeholder=""
                required={false}
                role="searchbox"
                type="search"
                value=""
              />
              <div
                className="input-group-append"
              >
                <button
                  className="search-btn"
                  disabled={true}
                  onClick={[Function]}
                >
                  <span
                    aria-hidden={true}
                    className="fa fa-search"
                    id="Icon19"
                  />
                  <span
                    className="sr-only"
                  >
                    Submit search
                  </span>
                </button>
              </div>
            </div>
            <div
              aria-live="polite"
              className="invalid-feedback invalid-feedback-nodanger"
              id="error-asInput18"
            >
              <span />
            </div>
          </div>
        </div>
      </div>
      <div
        className="col-12 col-xl-4 mb-3 mb-xl-0 text-xl-right"
      >
        <button
          className="btn mr-2 btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa fa-refresh mr-2"
            id="Icon20"
          />
          Refresh data
        </button>
        <a
          className="request-codes-btn btn btn-primary"
          href="/test-page/request"
          onClick={[Function]}
        >
          <span
            aria-hidden={true}
            className="fa fa-plus mr-2"
            id="Icon21"
          />
          Request more codes
        </a>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="mt-3 alert fade alert-danger show"
          hidden={false}
          role="alert"
        >
          <div
            className="alert-dialog"
          >
            <div
              className="d-flex"
            >
              <div
                className="icon mr-2"
              >
                <span
                  aria-hidden={true}
                  className="fa fa-times-circle"
                  id="Icon22"
                />
              </div>
              <div
                className="message"
              >
                <span
                  className="title"
                >
                  Unable to load coupons
                </span>
                Try refreshing your screen (test error)
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`CodeManagementPageWrapper renders renders loading state correctly 1`] = `
Array [
  <div
    className="hero py-4 pt-md-5 pb-md-0"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-12 col-md-9 mb-2 mb-md-1"
        >
          <h1
            className={null}
          >
            Code Management
          </h1>
        </div>
        <div
          className="col-12 col-md-3 text-md-right mb-2 mb-md-1"
        >
          <img
            alt="edX for Business"
            src="test-file-stub"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="container-fluid"
  >
    <div
      className="row mt-4 mb-3 no-gutters"
    >
      <div
        className="col-12 col-xl-3 mb-3 mb-xl-0"
      >
        <h2
          className={null}
        >
          Overview
        </h2>
      </div>
      <div
        className="col-12 col-xl-4 mb-3 mb-xl-0 offset-xl-1"
      >
        <div
          className="border search-field"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            className="form-group form-inline"
          >
            <label
              className=""
              htmlFor="asInput14"
              id="label-asInput14"
            >
              Search by email or code:
            </label>
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              />
              <input
                aria-describedby="error-asInput14"
                aria-invalid={false}
                autoComplete="off"
                className="form-control is-invalid-nodanger input no-clear-btn"
                disabled={false}
                id="asInput14"
                name="search"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyPress={[Function]}
                placeholder=""
                required={false}
                role="searchbox"
                type="search"
                value=""
              />
              <div
                className="input-group-append"
              >
                <button
                  className="search-btn"
                  disabled={true}
                  onClick={[Function]}
                >
                  <span
                    aria-hidden={true}
                    className="fa fa-search"
                    id="Icon15"
                  />
                  <span
                    className="sr-only"
                  >
                    Submit search
                  </span>
                </button>
              </div>
            </div>
            <div
              aria-live="polite"
              className="invalid-feedback invalid-feedback-nodanger"
              id="error-asInput14"
            >
              <span />
            </div>
          </div>
        </div>
      </div>
      <div
        className="col-12 col-xl-4 mb-3 mb-xl-0 text-xl-right"
      >
        <button
          className="btn mr-2 btn-link"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa fa-refresh mr-2"
            id="Icon16"
          />
          Refresh data
        </button>
        <a
          className="request-codes-btn btn btn-primary"
          href="/test-page/request"
          onClick={[Function]}
        >
          <span
            aria-hidden={true}
            className="fa fa-plus mr-2"
            id="Icon17"
          />
          Request more codes
        </a>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="loading d-flex align-items-center justify-content-center coupons mt-3"
        >
          Loading...
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`CodeManagementPageWrapper renders renders non-empty results correctly 1`] = `
Array [
  <div
    className="hero py-4 pt-md-5 pb-md-0"
  >
    <div
      className="container-fluid"
    >
      <div
        className="row"
      >
        <div
          className="col-12 col-md-9 mb-2 mb-md-1"
        >
          <h1
            className={null}
          >
            Code Management
          </h1>
        </div>
        <div
          className="col-12 col-md-3 text-md-right mb-2 mb-md-1"
        >
          <img
            alt="edX for Business"
            src="test-file-stub"
          />
        </div>
      </div>
    </div>
  </div>,
  <div
    className="container-fluid"
  >
    <div
      className="row mt-4 mb-3 no-gutters"
    >
      <div
        className="col-12 col-xl-3 mb-3 mb-xl-0"
      >
        <h2
          className={null}
        >
          Overview
        </h2>
      </div>
      <div
        className="col-12 col-xl-4 mb-3 mb-xl-0 offset-xl-1"
      >
        <div
          className="border search-field"
          onBlur={[Function]}
          onFocus={[Function]}
        >
          <div
            className="form-group form-inline"
          >
            <label
              className=""
              htmlFor="asInput6"
              id="label-asInput6"
            >
              Search by email or code:
            </label>
            <div
              className="input-group"
            >
              <div
                className="input-group-prepend"
              />
              <input
                aria-describedby="error-asInput6"
                aria-invalid={false}
                autoComplete="off"
                className="form-control is-invalid-nodanger input no-clear-btn"
                disabled={false}
                id="asInput6"
                name="search"
                onBlur={[Function]}
                onChange={[Function]}
                onKeyPress={[Function]}
                placeholder=""
                required={false}
                role="searchbox"
                type="search"
                value=""
              />
              <div
                className="input-group-append"
              >
                <button
                  className="search-btn"
                  disabled={true}
                  onClick={[Function]}
                >
                  <span
                    aria-hidden={true}
                    className="fa fa-search"
                    id="Icon7"
                  />
                  <span
                    className="sr-only"
                  >
                    Submit search
                  </span>
                </button>
              </div>
            </div>
            <div
              aria-live="polite"
              className="invalid-feedback invalid-feedback-nodanger"
              id="error-asInput6"
            >
              <span />
            </div>
          </div>
        </div>
      </div>
      <div
        className="col-12 col-xl-4 mb-3 mb-xl-0 text-xl-right"
      >
        <button
          className="btn mr-2 btn-link"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onKeyDown={[Function]}
          type="button"
        >
          <span
            aria-hidden={true}
            className="fa fa-refresh mr-2"
            id="Icon8"
          />
          Refresh data
        </button>
        <a
          className="request-codes-btn btn btn-primary"
          href="/test-page/request"
          onClick={[Function]}
        >
          <span
            aria-hidden={true}
            className="fa fa-plus mr-2"
            id="Icon9"
          />
          Request more codes
        </a>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="pgn-transition-replace-group position-relative"
          style={
            Object {
              "height": null,
            }
          }
        />
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col"
      >
        <div
          className="coupon mb-3 mb-lg-2 rounded border"
        >
          <div
            aria-controls="coupon-details-0"
            aria-expanded={false}
            className="metadata row no-gutters p-2 d-flex align-items-center rounded"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="col-sm-12 col-lg-3 mb-2 mb-lg-0"
            >
              <small
                className="text-muted"
              >
                Coupon Name
              </small>
              <div>
                test-title-1
              </div>
            </div>
            <div
              className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
            >
              <div
                className="row no-gutters"
              >
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Valid From
                  </small>
                  <div>
                    January 3, 2019
                  </div>
                </div>
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Valid To
                  </small>
                  <div>
                    September 18, 2019
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
            >
              <div
                className="row no-gutters"
              >
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Assignments Remaining
                  </small>
                  <div>
                    2
                  </div>
                </div>
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Enrollments Redeemed
                  </small>
                  <div>
                    2 of 10
                    <span
                      className="ml-1"
                    >
                      (20%)
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="icons col-lg-1 order-first order-lg-last text-right pr-2 mt-1 m-lg-0"
            >
              <span
                aria-hidden={true}
                className="fa fa-chevron-down text-primary"
                id="Icon10"
              />
              <span
                className="sr-only"
              >
                Open coupon details
              </span>
            </div>
          </div>
          <div
            className="coupon-details row no-gutters px-2 my-3 d-none"
            id="coupon-details-0"
          >
            <div
              className="col"
            />
          </div>
        </div>
        <div
          className="coupon mb-3 mb-lg-2 rounded border"
        >
          <div
            aria-controls="coupon-details-1"
            aria-expanded={false}
            className="metadata row no-gutters p-2 d-flex align-items-center rounded"
            onClick={[Function]}
            onKeyDown={[Function]}
            role="button"
            tabIndex="0"
          >
            <div
              className="col-sm-12 col-lg-3 mb-2 mb-lg-0"
            >
              <small
                className="text-muted"
              >
                Coupon Name
              </small>
              <div>
                test-title-2
              </div>
            </div>
            <div
              className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
            >
              <div
                className="row no-gutters"
              >
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Valid From
                  </small>
                  <div>
                    January 3, 2019
                  </div>
                </div>
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Valid To
                  </small>
                  <div>
                    September 18, 2019
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col-sm-12 col-lg-4 mb-2 mb-lg-0"
            >
              <div
                className="row no-gutters"
              >
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Assignments Remaining
                  </small>
                  <div>
                    2
                  </div>
                </div>
                <div
                  className="col"
                >
                  <small
                    className="text-muted"
                  >
                    Enrollments Redeemed
                  </small>
                  <div>
                    2 of 10
                    <span
                      className="ml-1"
                    >
                      (20%)
                    </span>
                  </div>
                </div>
              </div>
            </div>
            <div
              className="icons col-lg-1 order-first order-lg-last text-right pr-2 mt-1 m-lg-0"
            >
              <span
                aria-hidden={true}
                className="fa fa-chevron-down text-primary"
                id="Icon11"
              />
              <span
                className="sr-only"
              >
                Open coupon details
              </span>
            </div>
          </div>
          <div
            className="coupon-details row no-gutters px-2 my-3 d-none"
            id="coupon-details-1"
          >
            <div
              className="col"
            />
          </div>
        </div>
        <div
          className="d-flex mt-4 justify-content-center"
        >
          <nav
            aria-label="coupons pagination"
          >
            <div
              aria-atomic={true}
              aria-live="polite"
              aria-relevant="text"
              className="sr-only"
            >
              Page 1, Current Page, of 1
            </div>
            <ul
              className="pagination"
            >
              <li
                className="page-item disabled"
              >
                <button
                  aria-label="Previous"
                  className="btn previous page-link"
                  disabled={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <div>
                    <span
                      aria-hidden={true}
                      className="fa fa-chevron-left mr-2"
                      id="pagination-12"
                    />
                    Previous
                  </div>
                </button>
              </li>
              <li
                className="page-item disabled"
              >
                <button
                  aria-label="Next"
                  className="btn next page-link"
                  disabled={true}
                  onBlur={[Function]}
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  tabIndex="-1"
                  type="button"
                >
                  <div>
                    Next
                    <span
                      aria-hidden={true}
                      className="fa fa-chevron-right ml-2"
                      id="pagination-13"
                    />
                  </div>
                </button>
              </li>
            </ul>
          </nav>
        </div>
      </div>
    </div>
  </div>,
]
`;
